# csv-data-generator

./: .gitignore  Cargo.toml  LICENSE.md  README.md
samples/: sample_input.json
src/: errors.rs  generator.rs  main.rs  models.rs
