[package]
name = "csv-data-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
fake = { version = "4.0.0", features = ["derive", "chrono", "uuid"] }
rand = "0.9.0"
rand_regex = "0.18.0"
rand_xorshift = "0.4.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
